# Desktop

./: BE Central.webloc  Bestegg Service Portal.webloc  CursorOverview (2).pptx
dailyeconomy/: README.md  clean_visualizations.py  config.py  daily_economy_report.py  fred.py  fred_context.txt  html_to_pdf.py  implementation-plan.md  requirements.txt  standalone_economic_report.html  standalone_economic_report_updated.html
dailyeconomy/FRED_20250407/: CPIAUCSL_20250407.csv  CSUSHPINSA_20250407.csv  DGS10_20250407.csv  DGS2_20250407.csv  ICSA_20250407.csv  NFCI_20250407.csv  RSAFS_20250407.csv  T10Y2Y_20250407.csv
dailyeconomy/modules/: __init__.py  analyzer.py  data_loader.py  llm_insights.py  report_generator.py  visualizer.py
dailyeconomy/reports/: Economy_Report_20250407.html  metadata_20250407.json
dailyeconomy/templates/: report_template.html
dailyeconomy/utils/: __init__.py  helpers.py
demo/: .gitignore  README.md  package-lock.json  package.json  plan.md  plan.xml  server.js
demo/public/: index.html
demotest/: apikey
llama4test/: llama_url.txt
metaflow-copilot/: README.md  pyproject.toml
metaflow-resources/: fancy.xml  metaflowgpureference.xml  original.xml
