[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "metaflow-copilot"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "U.N. Owen", email = "void@some.where" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = []

[project.urls]
Documentation = "https://github.com/U.N. Owen/metaflow-copilot#readme"
Issues = "https://github.com/U.N. Owen/metaflow-copilot/issues"
Source = "https://github.com/U.N. Owen/metaflow-copilot"

[tool.hatch.version]
path = "src/metaflow_copilot/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/metaflow_copilot tests}"

[tool.coverage.run]
source_pkgs = ["metaflow_copilot", "tests"]
branch = true
parallel = true
omit = [
  "src/metaflow_copilot/__about__.py",
]

[tool.coverage.paths]
metaflow_copilot = ["src/metaflow_copilot", "*/metaflow-copilot/src/metaflow_copilot"]
tests = ["tests", "*/metaflow-copilot/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
